# HW01

./: .buildinfo  .travis.yml  LICENSE  README.md  api.html  design.html  example.py  genindex.html  index.html  objects.inv  release.sh  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
_sources/: api.rst.txt  design.rst.txt
docs/: Makefile  api.rst  conf.py  design.rst  index.rst
hw01/: __init__.py  constants.py  hw01.py
source/: __init__.py  example.py  hw01.py
tests/: test_hw01.py
