[metadata]
name = hw01
description = Python library to work with Lenovo HW01
long_description = file: README.md
author = Nabil BENDAFI
author-email = nabil@bendafi.fr
url = https://github.com/nabilbendafi/hw01
license = MIT
keywords = api health

[options]
include_package_data = True
packages = hw01

[bdist_wheel]
universal = 1

[aliases]
package = clean --all egg_info bdist_wheel sdist

[nosetests]
verbosity=2
with-doctest=1
with-coverage=1
cover-package=hw01
detailed-errors=1
cover-inclusive=1
cover-erase=1
#debug=nose.loader

[lint]
lint-packages=hw01
